force-app/main/default/objects/Stock_x_MM__c/Stock_x_MM__c.object-meta.xml
<CustomObject>
    <label>Stock x MM</label>
    <nameField>
        <displayFormat>SXM-{0000}</displayFormat>
        <label>Stock x MM Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Stock x MM</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>