force-app/main/default/objects/Stock_x_MM__c/fields/APM__c.field-meta.xml
<CustomField>
    <fullName>APM__c</fullName>
    <formula>Stock_x_Ciclo__r.APM__r.FirstName + &quot; &quot; + Stock_x_Ciclo__r.APM__r.LastName</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>APM</label>
    <type>Text</type>
</CustomField>