force-app/main/default/objects/Stock_x_MM__c/fields/Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Ciclo__c</fullName>
    <formula>Stock_x_Ciclo__r.Ciclo__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Ciclo</label>
    <type>Text</type>
</CustomField>