force-app/main/default/objects/Stock_x_MM__c/fields/Entregado__c.field-meta.xml
<CustomField>
    <fullName>Entregado__c</fullName>
    <label>Entregado</label>
    <summarizedField>Muestras_Entregadas__c.Cantidad__c</summarizedField>
    <summaryForeignKey>Muestras_Entregadas__c.Stock_x_MM__c</summaryForeignKey>
    <summaryOperation>sum</summaryOperation>
    <type>Summary</type>
</CustomField>