force-app/main/default/objects/Stock_x_MM__c/fields/Muestra_Medica__c.field-meta.xml
<CustomField>
    <fullName>Muestra_Medica__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Muestra Medica</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Stock x MM</relationshipLabel>
    <relationshipName>Stock_x_MM</relationshipName>
    <type>Lookup</type>
</CustomField>