force-app/main/default/objects/Stock_x_MM__c/fields/Muestra_Medica_Name__c.field-meta.xml
<CustomField>
    <fullName>Muestra_Medica_Name__c</fullName>
    <formula>Muestra_Medica__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Muestra Medica Name</label>
    <type>Text</type>
</CustomField>