force-app/main/default/objects/Stock_x_MM__c/fields/Recibido__c.field-meta.xml
<CustomField>
    <fullName>Recibido__c</fullName>
    <label>Recibido</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>