force-app/main/default/objects/Stock_x_MM__c/fields/Remanente__c.field-meta.xml
<CustomField>
    <fullName>Remanente__c</fullName>
    <label>Remanente</label>
    <precision>4</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>