force-app/main/default/objects/Stock_x_MM__c/fields/Stock_x_Ciclo__c.field-meta.xml
<CustomField>
    <fullName>Stock_x_Ciclo__c</fullName>
    <label>Stock x Ciclo</label>
    <referenceTo>Stock_x_Ciclo__c</referenceTo>
    <relationshipLabel>Stock x MM</relationshipLabel>
    <relationshipName>Stock_x_MM</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>