force-app/main/default/objects/Stock_x_MM__c/fields/Total__c.field-meta.xml
<CustomField>
    <fullName>Total__c</fullName>
    <formula>Remanente__c + Recibido__c - Entregado__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Total</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>